# auto_scoring_ai

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/auto_scoring_ai/: __init__.py  app.py
tests/: test_auto_scoring_ai.py
