[project]
name = "auto-scoring-ai"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "streamlit>=1.42.0",
    "markitdown>=0.0.1a4",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/auto_scoring_ai"]
